Add Generate posts from Json

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,9 +26,9 @@ href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='86.4 -
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="BlogSonia is a website that combines my portfolio, blog, and thoughts with AI-generated profiles and posts. Built using ReactJS, Javascript, MUI, and several APIs, it aims to help people learn more about me and my ideas."
+      content="FaceBlog is a website that combines my portfolio, blog, and thoughts with AI-generated profiles and posts. Built using ReactJS, Javascript, MUI, and several APIs, it aims to help people learn more about me and my ideas."
     />
-    <title>BlogSonia</title>
+    <title>FaceBlog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
