--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,6 +30,15 @@ href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='86.4 -
     />
     <title>FaceBlog</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-86PEYKDX2K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-86PEYKDX2K');
+</script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
