Add dark mode & responsiveness to profile box

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@ href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='86.4 -
 </svg>"
 />
 <meta name="author" content="Julian Bristol"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta
       name="description"
       content="FaceBlog is a website that combines my portfolio, blog, and thoughts with AI-generated profiles and posts. Built using ReactJS, Javascript, MUI, and several APIs, it aims to help people learn more about me and my ideas."
